test/resources/nameAnalyzer/passing/ConstructorVsIdPattern.amy
object ConstructorVsId
  abstract class Foo
  case class Bar() extends Foo
  def foo(f: Foo): Int(32) :=
    f match {
      case Bar() => 42
      case Bar => 42
    }
  end foo
end ConstructorVsId
