test/resources/nameAnalyzer/failing/DuplicateParams.amy
object Params
  def foo(i: Int(32), i: Boolean): Int(32) := i end foo
end Params
